# JokerPoker

./: README.md
documentation/: architecture.md  changelog.md  functionalspecification.md  testingreport.md  usermanual.md  worktimeaccounting.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: advancedmonopolydiagram.md  advancedsequencediagram.md  classdiagram.md  monopolydiagram.md  sequencediagram.md
poker/: .pylintrc  pyproject.toml  tasks.py
poker/src/: constants.py  engine.py  main.py  models.py  poker.py
poker/src/entities/: engine.py  models.py
poker/src/tests/: entities_test.py  models_test.py  ui_test.py
poker/src/ui/: button.py  end_screen.py  game_screen.py  game_ui.py  set_cards.py  start.py  start_screen.py
