[tool.poetry]
name = "poker"
version = "0.1.0"
description = ""
authors = ["JesseHantula <jesse.hantula@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
pygame = "^2.3.0"
pytest = "^7.2.2"


[tool.poetry.group.defv.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
